Fixed overflow

--- a/style.css
+++ b/style.css
@@ -90,7 +90,8 @@ html, body {
   font-size: 2.2vmin;
   line-height: 1.5;
   color: #36211B;
-  background-color: #F5FFEB; }
+  background-color: #F5FFEB;
+  word-wrap: break-word; }
 
 @media screen and (min-aspect-ratio: 1 / 1) and (min-width: 700px) {
   #imageContainer {
